Add new TodoPadel modal images

--- a/index.html
+++ b/index.html
@@ -444,11 +444,13 @@
                             <button type="button" data-bs-target="#carPadel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                             <button type="button" data-bs-target="#carPadel" data-bs-slide-to="1" aria-label="Slide 2"></button>
                             <button type="button" data-bs-target="#carPadel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carPadel" data-bs-slide-to="3" aria-label="Slide 4"></button>
                         </div>
                         <div class="carousel-inner">
-                            <div class="carousel-item active"><img src="padelapp1.png" class="img-preview" alt="1" onclick="openLightbox(this)"></div>
-                            <div class="carousel-item"><img src="padelapp2.png" class="img-preview" alt="2" onclick="openLightbox(this)"></div>
-                            <div class="carousel-item"><img src="padelapp3.png" class="img-preview" alt="3" onclick="openLightbox(this)"></div>
+                            <div class="carousel-item active"><img src="padelapp1.jpeg" class="img-preview" alt="1" onclick="openLightbox(this)"></div>
+                            <div class="carousel-item"><img src="padelapp2.jpeg" class="img-preview" alt="2" onclick="openLightbox(this)"></div>
+                            <div class="carousel-item"><img src="padelapp3.jpeg" class="img-preview" alt="3" onclick="openLightbox(this)"></div>
+                            <div class="carousel-item"><img src="padelapp4.jpeg" class="img-preview" alt="4" onclick="openLightbox(this)"></div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carPadel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -460,9 +462,10 @@
                         </button>
                     </div>
                     <div class="row g-2 d-none d-md-flex mb-3">
-                        <div class="col-4"><img src="padelapp1.png" class="img-preview" alt="1" onclick="openLightbox(this)"></div>
-                        <div class="col-4"><img src="padelapp2.png" class="img-preview" alt="2" onclick="openLightbox(this)"></div>
-                        <div class="col-4"><img src="padelapp3.png" class="img-preview" alt="3" onclick="openLightbox(this)"></div>
+                        <div class="col-3"><img src="padelapp1.jpeg" class="img-preview" alt="1" onclick="openLightbox(this)"></div>
+                        <div class="col-3"><img src="padelapp2.jpeg" class="img-preview" alt="2" onclick="openLightbox(this)"></div>
+                        <div class="col-3"><img src="padelapp3.jpeg" class="img-preview" alt="3" onclick="openLightbox(this)"></div>
+                        <div class="col-3"><img src="padelapp4.jpeg" class="img-preview" alt="4" onclick="openLightbox(this)"></div>
                     </div>
                     <h6 class="fw-bold text-primary" data-i18n="modal-padel-subtitle">Detalles del Proyecto</h6>
                     <p class="small text-body-secondary" data-i18n="modal-padel-desc">TodoPadel (2026) — Plataforma integral de gestión de torneos de Pádel. Desarrollé una aplicación Full-Stack responsiva enfocada en la experiencia del usuario (clubes y jugadores). Implementé el backend en Python con Django, garantizando la seguridad transaccional y algoritmos matemáticos en la generación de cuadros eliminatorios y byes. Para lograr una UI ágil y moderna, utilicé HTMX junto a Tailwind CSS y DaisyUI, consiguiendo transiciones instantáneas sin el peso de frameworks pesados de JS. La plataforma gestiona la persistencia de imágenes a través de Cloudinary y notificaciones vía Resend API, estando 100% desplegada en un entorno de la nube de Render.</p>
